<resources>

    <string name="app_name">MobiWay</string>
    <string name="facebook_app_id">1583611691898292</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>

    <!-- Activity title -->
    <string name="title_activity_main">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Required inputs -->
    <string name="emailAddressRequired">Please insert e-mail address</string>
    <string name="emailAddressNotValid">Please insert a valid e-mail</string>
    <string name="emailAddressExists">E-mail already used</string>
    <string name="passwordRequired">Please insert password</string>
    <string name="firstNameRequired">Please insert your first name</string>
    <string name="lastNameRequired">Please insert your last name</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_post_event">Post new event</string>
    <string name="logout_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="send_notification_to_server">Synchronize data with server.</string>

    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="location_updates">Location</string>
    <string name="policy_settings">Policy Settings</string>
    <string name="categories">Categories for points of interest</string>
    <string name="map_type">Map Type</string>
    <string name="route_type">Route Type</string>
    <string name="max_speed">Maximum speed</string>
    <string name="min_speed">Minimum speed</string>

    // Events
    <string name="send_event">Post event</string>
    <string name="car_accident">Car accident</string>
    <string name="road_blocked">Road blocked</string>
    <string name="event_pothole">Pothole</string>
    <string name="events">Events</string>
    <string name="event_add_details">Add details</string>
    <string name="event_type">Event type</string>

    <string name="key_language_preference">key_language_preference</string>
    <string name="key_account_preference">key_account_preference</string>
    <string name="key_location_preference">key_location_preference</string>
    <string name="key_categories_screen">key_categories_screen</string>
    <string name="key_map_type_list_preference">key_map_type_list_preference</string>
    <string name="key_route_type_list_preference">key_route_type_list_preference</string>
    <string name="key_max_speed_preference">key_max_speed_preference</string>
    <string name="key_min_speed_preference">key_min_speed_preference</string>

    <string name="use_gps_as_src">Use GPS as Source</string>
    <string name="use_as_src">Set as Source</string>
    <string name="use_as_dst">Set as Destination</string>
    <string name="show_route_pgrouting">Show Route (pgRouting)</string>
    <string name="show_route_osrm">Show Route (OSRM)</string>
    <string name="clear_routes">Clear Routes</string>
    <string name="add_event">Add event</string>

    <string-array name="mapTypeEntries">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="mapTypeValues">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="routeTypeEntries">
        <item>Car</item>
        <item>Bicycle</item>
        <item>Foot</item>
    </string-array>
    <string-array name="routeTypeValues">
        <item>Car</item>
        <item>Bicycle</item>
        <item>Foot</item>
    </string-array>

    <string name="default_language">ro</string>
    <string-array name="language_list_name">
        <item>Romanian</item>
        <item>English</item>
    </string-array>
    <string-array name="language_list_value">
        <item>ro</item>
        <item>en</item>
    </string-array>

    <!-- Login & Create Account -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="phone_number">Phone Number*</string>
    <string name="phone_number_explanation">*Your phone number is used to link you with your friends.
    Without it, you cannot see your friends in this app.</string>
    <string name="login_button_content">LOG IN</string>
    <string name="accept_policy_button_content"> ACCEPT POLICY </string>
    <string name="create_account_button_content"> CREATE ACCOUNT </string>
    <string name="reset_password">Reset password</string>
    <string name="create_account_action_bar_content">Create Account</string>
    <string name="authentication_error">E-mail or password is incorrect!</string>
    <string name="password_match_error">Password does not match the confirm password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="done">DONE</string>
    <string name="loading">Loading..</string>
    <string name="share_location">Share My Location</string>
    <string name="share_speed">Share My Speed</string>

    <!-- Map -->
    <string name="show_route">Show Route</string>
    <string name="hide_routes">Hide Routes</string>
    <string name="search_place">Search place..</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="user_loc">
        <item>bar</item>
        <item>cafe</item>
        <item>fast_food</item>
        <item>restaurant</item>
        <item>pub</item>
        <item>school</item>
        <item>college</item>
        <item>library</item>
        <item>university</item>
        <item>fuel</item>
        <item>taxi</item>
        <item>car_wash</item>
        <item>atm</item>
        <item>bank</item>
        <item>clinic</item>
        <item>dentist</item>
        <item>hospital</item>
        <item>pharmacy</item>
        <item>cinema</item>
        <item>night_club</item>
        <item>theatre</item>
        <item>gym</item>
        <item>marketplace</item>
        <item>police</item>
    </string-array>

    <string name="licenses">Pub, police, marketplace, dentist, fuel, bar icon made by http://www.flaticon.com/authors/madebyoliver from www.flaticon.com.\n\n
        Gym, club, hospital, clinic, pharmacy, carwash, taxi, library, university, college, school, restaurant, fastfood, coffee icons made by http://www.freepik.com from www.flaticon.com.\n\n
        Theater icon made by http://www.flaticon.com/authors/popcorns-arts from www.flaticon.com.\n\n
        Cinema icon made by http://www.vectorsmarket.com from www.flaticon.com.\n\n
        Bank icon made by https://roundicons.com from www.flaticon.com.\n\n
        ATM icon made by http://www.flaticon.com/authors/prosymbols from www.flaticon.com.
    </string>

</resources>
