<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:title="@string/action_statistics"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="103"
        app:showAsAction="never" />

    <item
        android:id="@+id/gps_as_src"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/use_gps_as_src"
        app:showAsAction="never" />

    <item
        android:id="@+id/src_loc"
        android:orderInCategory="100"
        android:title="@string/use_as_src"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/dst_loc"
        android:orderInCategory="100"
        android:title="@string/use_as_dst"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_route_osrm"
        android:orderInCategory="100"
        android:title="@string/show_route_osrm"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_route_pgrouting"
        android:orderInCategory="100"
        android:title="@string/show_route_pgrouting"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_routes"
        android:orderInCategory="100"
        android:title="@string/clear_routes"
        app:showAsAction="never" />

    <item
        android:id="@+id/post_event"
        android:orderInCategory="100"
        android:title="@string/add_event"
        app:showAsAction="never" />


</menu>
