<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="80dp"
        tools:context="ro.pub.acs.mobiway.gui.auth.CreateAccountUserFragment">

        <EditText
            android:id="@+id/firstname_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/firstName"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/lastname_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/lastName"
            android:inputType="textCapWords">
        </EditText>

        <EditText
            android:id="@+id/username_ca_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:id="@+id/password_ca_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:id="@+id/phone_number_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/phone_number"
            android:inputType="phone">
        </EditText>

        <Button
            android:id="@+id/create_account_next_button"
            style="@style/LoginLinkStyle"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/done" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/custom_text_theme_color"
            android:text="@string/phone_number_explanation"/>

    </LinearLayout>
</ScrollView>