<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <PreferenceCategory
        android:id="@+id/prefCat"
        android:title="General"
        android:persistent="true">

        <EditTextPreference
            android:id="@+id/editTextAccount"
            android:key="@string/key_account_preference"
            android:title="@string/account"
            android:editable="false"
            android:clickable="false"
            android:enabled="false"
            />

        <SwitchPreference
            android:id="@+id/switchPreferencesLocation"
            android:title="@string/location_updates"
            android:key="@string/key_location_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:summary="@string/send_notification_to_server"
            />

        <ListPreference
            android:id="@+id/mapTypeListPreference"
            android:key="@string/key_map_type_list_preference"
            android:title="@string/map_type"
            android:entries="@array/mapTypeEntries"
            android:entryValues="@array/mapTypeValues"
            android:defaultValue="Normal"
            />

        <ListPreference
            android:id="@+id/routeTypeListPreference"
            android:key="@string/key_route_type_list_preference"
            android:title="@string/route_type"
            android:entries="@array/routeTypeEntries"
            android:entryValues="@array/routeTypeValues"
            android:defaultValue="Car"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:id="@+id/prefPolicy"
        android:persistent="true"
        android:title="@string/policy_settings"
        android:key="@string/policy_settings">
    </PreferenceCategory>

    <PreferenceCategory
        android:id="@+id/categoriesPreferenceScreen"
        android:key="@string/key_categories_screen"
        android:title="@string/categories"
        android:persistent="true">

        <CheckBoxPreference
            android:id="@+id/bar_checkbox"
            android:key="bar"
            android:title="Bar"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/cafe_checkbox"
            android:key="cafe"
            android:title="Cafe"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/fast_food_checkbox"
            android:key="fast_food"
            android:title="Fast Food"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/restaurant_checkbox"
            android:key="restaurant"
            android:title="Restaurant"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/pub_checkbox"
            android:key="pub"
            android:title="Pub"
            android:persistent="true"
            />

        <CheckBoxPreference
            android:id="@+id/school_checkbox"
            android:key="school"
            android:title="School"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/college_checkbox"
            android:key="college"
            android:title="College"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/library_checkbox"
            android:key="library"
            android:title="Library"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/university_checkbox"
            android:key="university"
            android:title="University"
            android:persistent="true"
            />

        <CheckBoxPreference
            android:id="@+id/fuel_checkbox"
            android:key="fuel"
            android:title="Fuel"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/taxi_checkbox"
            android:key="taxi"
            android:title="Taxi"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/car_wash_checkbox"
            android:key="car_wash"
            android:title="Car Wash"
            android:persistent="true"
            />

        <CheckBoxPreference
            android:id="@+id/atm_checkbox"
            android:key="atm"
            android:title="ATM"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/bank_checkbox"
            android:key="bank"
            android:title="Bank"
            android:persistent="true"
            />

        <CheckBoxPreference
            android:id="@+id/clinic_checkbox"
            android:key="clinic"
            android:title="Clinic"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/dentist_checkbox"
            android:key="dentist"
            android:title="Dentist"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/hospital_checkbox"
            android:key="hospital"
            android:title="Hospital"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/pharmacy_checkbox"
            android:key="pharmacy"
            android:title="Pharmacy"
            android:persistent="true"
            />

        <CheckBoxPreference
            android:id="@+id/cinema_checkbox"
            android:key="cinema"
            android:title="Cinema"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/night_club_checkbox"
            android:key="night_club"
            android:title="Night Club"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/theatre_checkbox"
            android:key="theatre"
            android:title="Theatre"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/gym_checkbox"
            android:key="gym"
            android:title="Gym"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/marketplace_checkbox"
            android:key="marketplace"
            android:title="Marketplace"
            android:persistent="true"
            />
        <CheckBoxPreference
            android:id="@+id/police_checkbox"
            android:key="police"
            android:title="Police"
            android:persistent="true"
            />

    </PreferenceCategory>

</PreferenceScreen>