<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="80dp"
        tools:context="ro.pub.acs.mobiway.gui.auth.ResetPasswordFragment"
        android:weightSum="1" >

            <EditText
                android:id="@+id/username_reset_edit_text"
                style="@style/LoginEditTextStyle"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress">
            </EditText>

            <EditText
                android:id="@+id/password_reset_edit_text"
                style="@style/LoginEditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword">
            </EditText>

            <EditText
                android:id="@+id/retype_password_reset_edit_text"
                style="@style/LoginEditTextStyle"
                android:hint="@string/retype_password"
                android:inputType="textPassword">
            </EditText>

            <Button
                android:id="@+id/reset_password_next_button"
                style="@style/LoginLinkStyle"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/done" />

    </LinearLayout>
</ScrollView>

