<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AuthenticationActivity$PlaceholderFragment"
        android:weightSum="1">


        <ImageView
            android:id="@+id/icon_image_view"
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/icon"
            android:layout_weight="0.38" />

        <EditText
            android:id="@+id/username_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/LoginEditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/auth_error_text_view"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:textSize="6pt"
            android:visibility="invisible"
            android:textColor="@color/custom_error_text_color"
            android:text="@string/authentication_error" />

        <Button
            android:id="@+id/login_button"
            style="@style/LoginButtonStyle"
            android:text="@string/login_button_content" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook_button"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/create_account_button"
            style="@style/LoginLinkStyle"
            android:text="@string/create_account_button_content" />

    </LinearLayout>
</ScrollView>