<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <LinearLayout
        android:id="@+id/fragment_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AuthenticationActivity$PlaceholderFragment"
        android:weightSum="1">

        <WebView
            android:id="@+id/policy_textview"
            android:layout_weight="1"
            android:layout_height="0dip"
            android:layout_width="wrap_content">
        </WebView>

        <CheckBox android:id="@+id/share_location_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            android:textColor="@color/bright_foreground_disabled_material_dark"/>

        <CheckBox android:id="@+id/share_speed_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bright_foreground_disabled_material_dark"
            android:text="@string/share_speed"/>

        <Button
            android:id="@+id/policy_accept_button"
            style="@style/LoginButtonStyle"
            android:text="@string/accept_policy_button_content" />

    </LinearLayout>
</ScrollView>